--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   },
   "homepage": "https://github.com/raphaelalvarenga/gerenciamento-de-produtos-backend#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "nodemon": "^2.0.4",
-    "ts-config": "^20.10.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.6"
   }
 }
