--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "homepage": "https://github.com/raphaelalvarenga/gerenciamento-de-produtos-backend#readme",
   "dependencies": {
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mysql2": "github:types/mysql2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
